Links Update and CSS overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   background-color: #202023;
   /* background-color: #4158D0;
-background-image: linear-gradient(23deg, #4158D0 0%, #a2489a 30%, #000000 100%); */
-
+  background-image: linear-gradient(23deg, #4158D0 0%, #a2489a 30%, #000000 100%); */
   color: #f0e7db;
   padding-left: 20px;
   padding-right: 20px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .cursor {
